# columbiad

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  meson.build
data/: app.gresource.xml  meson.build  style.css
src/: carousel.c  carousel.h  common.h  image.c  image.h  main.c  meson.build  settings.c  settings.h  window.c  window.h
